--- a/miniprogram/pages/restaurant/restaurant.wxml
+++ b/miniprogram/pages/restaurant/restaurant.wxml
@@ -2,6 +2,7 @@
 <view class="wholeStyle">
   <view class="favoritesList">
     <view wx:for="{{restaurantList}}" wx:for-item="item">
+      <navigator url="../userList/userList?openid={{item.openid}}">
       <view class="favoritesItem">
         <image src="{{item.cover}}" class="favoritesItemImage" mode="aspectFill"></image>
         <text class="favoritesItemName">{{item.name}}</text>
@@ -10,6 +11,7 @@
           <text class="favoritesItemAuthorText">{{item.address}}</text>
         </view>
       </view>
+      </navigator>
     </view>
   </view>
 </view>
