--- a/miniprogram/pages/restaurant/restaurant.wxml
+++ b/miniprogram/pages/restaurant/restaurant.wxml
@@ -1,17 +1,22 @@
 <!--pages/restaurant/restaurant.wxml-->
 <view class="wholeStyle">
   <view class="favoritesList">
-    <view wx:for="{{restaurantList}}" wx:for-item="item">
-      <navigator url="../userList/userList?openid={{item.openid}}">
-      <view class="favoritesItem">
-        <image src="{{item.cover}}" class="favoritesItemImage" mode="aspectFill"></image>
-        <text class="favoritesItemName">{{item.name}}</text>
-        <view class="favoritesItemAuthor">
-          <image src="../../image/position.png" class="favoritesItemAuthorIcon"></image>
-          <text class="favoritesItemAuthorText">{{item.address}}</text>
-        </view>
-      </view>
-      </navigator>
+    <view wx:if="{{restaurantList.length == 0}}">
+    暂时没有餐馆
     </view>
+    <view wx:else>
+      <view wx:for="{{restaurantList}}" wx:for-item="item">
+        <navigator url="../restaurantInfo/restaurantInfo?openid={{item.openid}}&&_id={{item._id}}">
+        <view class="favoritesItem">
+          <image src="{{item.cover}}" mode="widthFix" class="favoritesItemImage"></image>
+          <text class="favoritesItemName">{{item.name}}</text>
+          <view class="favoritesItemAuthor">
+            <image src="../../image/position.png" class="favoritesItemAuthorIcon"></image>
+            <text class="favoritesItemAuthorText">{{item.address}}</text>
+          </view>
+        </view>
+        </navigator>
+      </view>
+    </view> 
   </view>
 </view>
