--- a/miniprogram/pages/classificationList/classificationList.wxss
+++ b/miniprogram/pages/classificationList/classificationList.wxss
@@ -20,7 +20,6 @@
 
 .favoritesItem{
   width: 320rpx;
-  height: 400rpx;
   display: flex;
   flex-direction: column;
   margin-top: 30rpx;
@@ -30,7 +29,6 @@
 
 .favoritesItemImage{
   width: 320rpx;
-  height: 250rpx;  
   border-radius: 10rpx;
 }
 
@@ -83,4 +81,21 @@
 .swiper{
   margin-top: 40rpx;
   margin-bottom: 40rpx;
+}
+
+.authorSet{
+  width: 300rpx;
+  height: 45rpx;
+}
+
+.authorSetIcon{
+  width: 30rpx;
+  height:30rpx;
+  margin-left:30rpx;
+}
+
+.authorSetText{
+  color:rgb(163, 163, 163);
+  font-size:30rpx;
+  margin-left:10rpx;
 }
