--- a/miniprogram/pages/recipeInfo/recipeInfo.wxss
+++ b/miniprogram/pages/recipeInfo/recipeInfo.wxss
@@ -119,18 +119,20 @@
 .materialItemFood {
   width: 43%;
   height: 100%;
-  font-size: small;
+  font-size: large;
   margin-top: 20rpx;
   text-align: left;
+  margin-left: 70rpx;
 }
 
 .materialItemNum {
   width: 43%;
   height: 100%;
-  font-size: small;
+  font-size: large;
   margin-top: 20rpx;
   color: gray;
   text-align: right;
+  margin-right: 70rpx;
 }
 
 .materialItemImage {
@@ -148,7 +150,7 @@
 
 .StepTitle {
   margin-top: 40rpx;
-  margin-bottom: 10rpx;
+  margin-bottom: 20rpx;
 }
 
 .StepImage {
@@ -245,6 +247,7 @@
   text-align: left;
   font-size: 35rpx;
   color: gray;
+  margin-left: 60%;
 }
 
 .CommentContext {
@@ -307,22 +310,42 @@
 }
 
 .commentInput{
-  width:70%;
+  width:80%;
+  height: 80%;
   background-color:#fff;
   font-size:15px;
-  border-radius:15rpx;
+  border-radius:2rpx;
   display: flex;
   align-items: center;
 }
 
 .send{
-  margin-left: 20px;
-  height: 80rpx;
+  width: 60px;
+  display: flex !important;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: 15px;
+  border-radius: 2px;
+  text-align: center;
+  padding: 0 2px !important;
+  font-size: 12px;
+  background-color: #e64340;
   color: #fff;
-  font-size: 34rpx;
-  background-color: green;
-  border: 0;
 }
+
+.fixComment{
+  height: 7%;
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  box-shadow: 0 0 2px rgba(0, 0, 0, 0.1);
+  z-index: 100;
+  display: flex; 
+  flex-direction: row;
+}
+
 
 
 
