--- a/miniprogram/pages/uploadRecipe/uploadRecipe.wxml
+++ b/miniprogram/pages/uploadRecipe/uploadRecipe.wxml
@@ -2,63 +2,74 @@
   <text>+菜谱封面\n诱人的封面是吸引人们的关键</text>
 </view>
 <view wx:elif="{{cover!=''}}" bindtap="uploadCover">
-  <image src="{{cover}}"></image>
+  <image src="{{cover}}" style="width: 100%" mode="widthFix"></image>
 </view>
 <view class="wholeStyle">
   <view class='addTitle'>
-    <input placeholder="输入这道美食的名字" placeholder-style="text-align: center" style="text-align: center" bindinput="{{name}}"></input>
+    <input placeholder="输入这道美食的名字" placeholder-style="text-align: center" style="text-align: center" bindinput="setName" value="{{name}}"></input>
   </view>
   <view class="container">
       <!-- 分割线 -->
     <view class="divLine"></view>
   </view>
   <view>
-    <textarea class="addStory" placeholder="输入这道美食背后的故事" bindinput="{{introduction}}"></textarea>
+    <textarea class="addStory" placeholder="输入这道美食背后的故事" bindinput="setIntroduction" value="{{introduction}}"></textarea>
   </view>
-  <view class="weui_cells__title">用料</view>
+  <view class="weui_cells__title" style="font-weight: bold; font-size: 38rpx">用料</view>
   <view class="weui-cell__input">
     <view wx:for="{{ingredients}}" class="weui-cell">
-      <image src="cloud://recipe-ihcta.7265-recipe-ihcta-1301986134/images/停用.svg" wx:if="{{temp1 == 0}}" data-index="{{index}}" bindtap="deleteIngredient" style="height: 25px; width: 25px"></image>
-      <input placeholder="食材" value="{{item.food}}" data-tag="food" data-index="{{index}}" bindblur="setIngredientsValue" style="margin-left:10px"></input>
+      <image src="cloud://recipe-ihcta.7265-recipe-ihcta-1301986134/images/停用.svg" wx:if="{{temp1 == 0}}" data-index="{{index}}" bindtap="deleteIngredient" style="height: 30rpx; width: 30rpx"></image>
+      <input placeholder="食材" value="{{item.food}}" data-tag="food" data-index="{{index}}" bindblur="setIngredientsValue" style="margin-left:20rpx"></input>
       <input placeholder="用量" value="{{item.count}}" data-tag="count" data-index="{{index}}" bindblur="setIngredientsValue"></input>
     </view>
   </view>
   <view style="display:flex; flex-direction: row; justify-content: space-between">
-    <view><text bindtap="addIngredient">添加用料</text></view>
+    <view><text bindtap="addIngredient" style="font-size: 30rpx; color: red;">添加用料</text></view>
     <view>
-      <text wx:if="{{temp1 == 1}}" bindtap="changeTemp1">修改</text>
-      <text wx:elif="{{temp1 == 0}}" bindtap="changeTemp1">完成</text>
+      <text wx:if="{{temp1 == 1}}" bindtap="changeTemp1" style="font-size: 30rpx; color: red;">修改</text>
+      <text wx:elif="{{temp1 == 0}}" bindtap="changeTemp1" style="font-size: 30rpx; color: red;">完成</text>
     </view>
   </view>
 
-  <view> <text>做法</text> </view>
+  <view style="margin-top: 30rpx"> <text style="font-weight: bold; font-size: 38rpx">做法</text> </view>
   <view wx:for="{{steps}}">
-    <image src="cloud://recipe-ihcta.7265-recipe-ihcta-1301986134/images/停用.svg" wx:if="{{temp2 == 0}}" data-index="{{index}}" bindtap="deleteStep" style="height: 25px; width: 25px"></image>
-    <view wx:if="{{item.picture==''}}" data-index="{{index}}" data-tag="picture" class='addCover' bindtap="uploadPicture">
-      <text>+步骤图\n上传至少两张步骤图</text>
+    <view wx:if="{{index == 0}}" style="margin-top: 20rpx">
+      <image src="cloud://recipe-ihcta.7265-recipe-ihcta-1301986134/images/停用.svg" wx:if="{{temp2 == 0}}" data-index="{{index}}" bindtap="deleteStep" style="height: 30rpx; width: 30rpx"></image>
+      <view wx:if="{{item.picture==''}}" data-index="{{index}}" data-tag="picture" class='addCover' bindtap="uploadPicture">
+        <text>+步骤图\n上传至少两张步骤图</text>
+      </view>
+      <view wx:elif="{{item.picture!=''}}" data-index="{{index}}" data-tag="picture" style="width: 100%" mode="widthFix" bindtap="uploadPicture">
+        <image src="{{item.picture}}"></image>
+      </view>
+      <input placeholder="添加说明步骤，至少两步" data-index="{{index}}" data-tag="step" value="{{item.step}}" bindblur="setStepsValue"></input>
     </view>
-    <view wx:elif="{{item.picture!=''}}" data-index="{{index}}" data-tag="picture" class='addCover' bindtap="uploadPicture">
-      <image src="{{item.picture}}"></image>
+    <view wx:else style="margin-top: 50rpx">
+      <image src="cloud://recipe-ihcta.7265-recipe-ihcta-1301986134/images/停用.svg" wx:if="{{temp2 == 0}}" data-index="{{index}}" bindtap="deleteStep" style="height: 30rpx; width: 30rpx"></image>
+      <view wx:if="{{item.picture==''}}" data-index="{{index}}" data-tag="picture" class='addCover' bindtap="uploadPicture">
+        <text>+步骤图\n上传至少两张步骤图</text>
+      </view>
+      <view wx:elif="{{item.picture!=''}}" data-index="{{index}}" data-tag="picture" style="width: 100%" mode="widthFix" bindtap="uploadPicture">
+        <image src="{{item.picture}}"></image>
+      </view>
+      <input placeholder="添加说明步骤，至少两步" data-index="{{index}}" data-tag="step" value="{{item.step}}" bindblur="setStepsValue"></input>
     </view>
-    <input placeholder="添加说明步骤，至少两步" data-index="{{index}}" data-tag="step" value="{{item.step}}" bindblur="setStepsValue"></input>
   </view>
-  <view style="display:flex; flex-direction: row; justify-content: space-between">
-    <view><text bindtap="addStep">添加用料</text></view>
+  <view style="display:flex; flex-direction: row; justify-content: space-between; margin-top: 50rpx">
+    <view><text bindtap="addStep" style="font-size: 30rpx; color: red;">添加步骤</text></view>
     <view>
-      <text wx:if="{{temp2 == 1}}" bindtap="changeTemp2">修改</text>
-      <text wx:elif="{{temp2 == 0}}" bindtap="changeTemp2">完成</text>
+      <text wx:if="{{temp2 == 1}}" bindtap="changeTemp2" style="font-size: 30rpx; color: red;">修改</text>
+      <text wx:elif="{{temp2 == 0}}" bindtap="changeTemp2" style="font-size: 30rpx; color: red;">完成</text>
     </view>
   </view>
-  <view> <text>小贴士</text> </view>
+  <view style="margin-top: 20rpx"> <text style="font-weight: bold; font-size: 38rpx">小贴士</text> </view>
   <view>
-    <textarea class="addStory" placeholder="这道菜还有哪些需要注意的细节和小技巧" bindinput="{{tip}}"></textarea>
+    <textarea class="addStory" placeholder="这道菜还有哪些需要注意的细节和小技巧" bindinput="setTip" value="{{tip}}"></textarea>
   </view>
   <view class='select_box'>
-    <view class='select' catchtap='selectTap'>
-      <text class='select_text'>推荐分类</text>
-      <image class='select_img {{show&&"select_img_rotate"}}' src='image/gobottom.png'></image>   
+    <view class='select'>
+      <text class='select_text' style="font-weight: bold; font-size: 38rpx">推荐分类</text>
     </view>
-    <view class="section {{reply? 'on':'off'}}">
+    <view class="section on">
       <view>
         <view wx:if="{{tags.length == 0}}">
           <text>请选择标签，最多两个</text>
@@ -70,9 +81,9 @@
         </view>
       </view>
       <view style="display: flex; flex-direction: row">
-        <text bindtap="toA">热门分类 </text>
-        <text style="margin-left: 10px" bindtap="toB">菜式 </text>
-        <text style="margin-left: 10px" bindtap="toC">场景</text>
+        <text bindtap="toA" style="color: red;">热门分类</text>
+        <text style="margin-left: 10px; color: red;" bindtap="toB">菜式</text>
+        <text style="margin-left: 10px; color: red;" bindtap="toC">场景</text>
       </view>
       <view wx:if="{{showA}}" style="display: flex; flex-direction: row; flex-wrap: wrap;">
         <button class="myButton" data-tag="家常菜" bindtap="addTag">家常菜</button>
@@ -101,5 +112,5 @@
     </view>
   </view>
 
-  <button bindtap="uploadRecipe">发布这个菜谱</button>
+  <button bindtap="uploadRecipe" style="border: 1rpx solid grey; width: 100%; margin-top: 30rpx; background-color: red; color: white">发布这个菜谱</button>
 </view>
