--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -10,18 +10,18 @@
 		<input bindtap="toSearchPage" bindinput="input" placeholder="搜索餐厅或者菜谱" placeholder-style="text-align:left;" value="{{searchVal}}" class="nextStep" style="width: 450rpx;">
 		</input>
 		<button bindtap="toIndex" class="nextStepCancel">取消</button>
+		<!-- <text style="margin-top:40%;">取消</text> -->
 	</view>
 	<!--搜索界面-->
 	<view wx:if="{{search == 1}}">
 		<view class="searchHistory">
 			<text>搜索历史</text>
-			<view style="display: flex; flex-direction: row; flex-wrap: wrap; margin-top: 20rpx"> 
-        	<view wx:for="{{history}}">
-					<button class="myButton" data-history="{{item}}" bindtap="setHistoryData">
-						{{item}}
-					</button>
+			<view wx:for="{{historyCount}}">
+				<view class="searchHistoryItem" hover-class='searchHistoryItem_hover' hover-stay-time="50">
+					<text class="searchHistoryItemText">背景</text>
+					<icon type="clear" size="15" style="margin:auto 30rpx;"></icon>
 				</view>
-      </view>
+			</view>
 		</view>
 	</view>
 
@@ -63,23 +63,24 @@
 
 		<!--每日必恰-->
 		<view wx:if="{{recommend == 1 && nearby == 0 && rank == 0}}">
-			<view wx:for="{{recipes}}" wx:key="*this" class="pictureCom">
-				<image src="{{item.cover}}" style="width: 100%" mode="widthFix"></image>
-				<view style="margin-top: -100rpx">
-					<navigator url="../recipeInfo/recipeInfo?_id={{item._id}}&&openid={{item.openid}}" >
-						<view class="name">
-							<text>{{item.name}}</text>
-						</view>
-						<view class="authorSet">
-							<image class="authorSetIcon" src="../../images/author.svg"></image>
-							<text class="authorSetText">{{item.chef}}</text>
-						</view>
-						<view class="goodsNum">
-							<text>点赞数：{{item.praise.length}}</text>
-							<text style="margin-left:30rpx;">阅读量：{{item.reading}}</text>
-						</view>
-					</navigator>
+			<view wx:for="{{recipes}}" wx:key="*this">
+				<view style="background-image: url({{item.cover}})" class="pictureCom">
+				<navigator url="../recipeInfo/recipeInfo?_id={{item._id}}&&openid={{item.openid}}">
+					<view style="height:10rpx;"></view>
+					<view class="name">
+						<text>{{item.name}}</text>
+					</view>
+					<view class="authorSet">
+						<image class="authorSetIcon" src="../../images/author.svg"></image>
+						<text class="authorSetText">{{item.chef}}</text>
+					</view>
+					<view class="goodsNum">
+						<text>点赞数：{{item.praise.length}}</text>
+						<text style="margin-left:30rpx;">阅读量：{{item.reading}}</text>
+					</view>
+				</navigator>
 				</view>
+				
 			</view>
 		</view>
 
@@ -115,22 +116,20 @@
 			</view>
 			<view wx:else>
 				<view wx:for="{{rankRecipe}}" wx:key="*this" class="pictureCom">
-					<view style="background-image: url({{item.cover}}); width: 660rpx" mode="widthFix">
-						<navigator url="../recipeInfo/recipeInfo?_id={{item._id}}&&openid={{item.openid}}">
-							<view style="height:10rpx;"></view>
-							<view class="name">
-								<text>{{item.name}}</text>
-							</view>
-							<view class="authorSet">
-								<image class="authorSetIcon" src="../../images/position.png"></image>
-								<text class="authorSetText">{{item.chef}}</text>
-							</view>
-							<view class="goodsNum">
-								<text>点赞数：{{item.praise.length}}</text>
-								<text style="margin-left:30rpx;">阅读量：{{item.reading}}</text>
-							</view>
-						</navigator>
-					</view>
+					<navigator url="../recipeInfo/recipeInfo?_id={{item._id}}&&openid={{item.openid}}">
+						<view style="height:10rpx;"></view>
+						<view class="name">
+							<text>{{item.name}}</text>
+						</view>
+						<view class="authorSet">
+							<image class="authorSetIcon" src="../../images/position.png"></image>
+							<text class="authorSetText">{{item.chef}}</text>
+						</view>
+						<view class="goodsNum">
+							<text>点赞数：{{item.praise.length}}</text>
+							<text style="margin-left:30rpx;">阅读量：{{item.reading}}</text>
+						</view>
+					</navigator>
 				</view>
 			</view>
 		</view>
