--- a/miniprogram/pages/restaurant/restaurant.wxss
+++ b/miniprogram/pages/restaurant/restaurant.wxss
@@ -4,6 +4,12 @@
   margin-right: 5%;
 }
 
+.Title{
+  text-align: center;
+  margin: 50rpx auto;
+  font-weight: bold;
+}
+
 .favoritesList{
   width: 100%;
   display: flex;
@@ -58,15 +64,38 @@
   width: 100%;
   height: 40rpx;
   text-align: left;
+  margin:5rpx auto;
   font-size: 30rpx;
   color: gray;
 }
 
 .favoritesItemName{
   width: 100%;
-  height: 40rpx;
+  height: 20rpx;
   text-align: left;
-  margin-top :10rpx;
-  font-size: 35rpx;
+  margin: 20rpx auto;
+  font-size: 30rpx;
   color: rgb(0, 0, 0);
+}
+
+.swiper{
+  margin-top: 40rpx;
+  margin-bottom: 40rpx;
+}
+
+.authorSet{
+  width: 300rpx;
+  height: 30rpx;
+}
+
+.authorSetIcon{
+  width: 20rpx;
+  height:20rpx;
+  margin-left:20rpx;
+}
+
+.authorSetText{
+  color:rgb(163, 163, 163);
+  font-size:25rpx;
+  margin-left:10rpx;
 }
