--- a/miniprogram/pages/userInfo/userInfo.wxml
+++ b/miniprogram/pages/userInfo/userInfo.wxml
@@ -1,10 +1,8 @@
-<!--pages/mine/mine.wxml--> 
 <view wx:if="{{isHide}}">
   <view wx:if="{{canIUse}}">
     <view>
       <text class="title">开始准备好好吃饭</text>
-      <textarea class="subtitle" value=""></textarea>
-      <button type='primary' open-type='getUserInfo' bindgetuserinfo='bindGetUserInfo'>微信授权登录</button>
+      <button type='primary' open-type='getUserInfo' bindgetuserinfo='bindGetUserInfo' style="width: 80%">微信授权登录</button>
     </view>
   </view>
   <view wx:else>请升级微信版本</view>
@@ -12,7 +10,7 @@
 <view wx:else>
   <view class="layout" style="margin-top: 20px;">
     <view style="flex: 2; margin-left: 5%">
-      <open-data type="userNickName"></open-data> 
+      <open-data type="userNickName" style="font-size:large"></open-data> 
       <view class="layout" style="margin-top: 60px;">
         <button bindtap="toFocusList">关注:{{userDetail.focus.length}}</button>
         <button bindtap="toFansList">粉丝:{{userDetail.fans.length}}</button>
@@ -28,28 +26,29 @@
   </view>
 
   <view class="layout" style="justify-content: center; margin-top: 10px">
-    <text bindtap="toCollection">收藏</text>
-    <text style="margin-left: 5px" bindtap="toRecipe">菜谱</text>
-    <text style="margin-left: 5px" bindtap="toRestaurant">餐馆</text>
+    <button style="color:rgb(160, 122, 221)" bindtap="toCollection">收藏</button>
+    <button style="margin-left: 4%;   color:rgb(160, 122, 221)" bindtap="toRecipe">菜谱</button>
+    <button style="margin-left: 4% ;  color:rgb(160, 122, 221)" bindtap="toRestaurant">餐馆</button>
   </view>
   <!--收藏-->
   <view wx:if="{{collection == 1 && recipe == 0 && restaurant == 0}}">
-    <view wx:if="{{userCollections.length == 0}}">
-      无收藏
+    <view wx:if="{{userCollections.length == 0}}" class="beauttext">
+      暂无收藏，请选择你喜欢的作品
     </view>
     <view wx:else>
       <view class="wholeStyle">
         <view class="favoritesList">
           <view wx:for="{{userCollections}}" wx:for-item="item">
-            <view class="favoritesItem">
-              <image src="{{item.imageUrl}}" class="favoritesItemImage" mode="aspectFill"></image>
-              <text class="favoritesItemName">{{item.recipe.name}}</text>
-              <view class="favoritesItemAuthor">
-                <image src="../../image/author.svg" class="favoritesItemAuthorIcon"></image>
-                <text class="favoritesItemAuthorText">{{item.recipe.chef}}</text>
+            <navigator url="../recipeInfo/recipeInfo?_id={{item._id}}&&openid={{item.openid}}">
+              <view class="favoritesItem">
+                <image src="{{item.cover}}" class="favoritesItemImage" mode="widthFix" style="width:100%"></image>
+                <text class="favoritesItemName">{{item.name}}</text>
+                <view class="favoritesItemAuthor">
+                  <image src="../../images/author.svg" class="favoritesItemAuthorIcon"></image>
+                  <text class="favoritesItemAuthorText">{{item.chef}}</text>
+                </view>
               </view>
-              <text class="favoritesItemTime">收藏于: {{item.date}}</text>
-            </view>
+            </navigator>
           </view>
         </view>
       </view>
@@ -58,18 +57,19 @@
 
   <!--菜谱-->
   <view wx:elif="{{collection == 0 && recipe == 1 && restaurant == 0}}">
-    <view wx:if="{{userRecipes.length == 0}}">
-      无菜谱
+    <view wx:if="{{userRecipes.length == 0}}" class="beauttext">
+      暂无菜谱，请上传您的作品
     </view>
     <view wx:else>
       <view class="wholeStyle">
         <view class="favoritesList">
           <view wx:for="{{userRecipes}}" wx:for-item="item">
-            <view class="favoritesItem">
-              <image src="{{item.headImageUrl}}" class="favoritesItemImage" mode="aspectFill"></image>
-              <text class="favoritesItemName">{{item.name}}</text>
-              <text class="favoritesItemTime">发布于: {{item.date}}</text>
-            </view>
+            <navigator url="../recipeInfo/recipeInfo?_id={{item._id}}&&openid={{item.openid}}">
+              <view class="favoritesItem">
+                <image src="{{item.cover}}" class="favoritesItemImage" mode="widthFix" style="width: 100%"></image>
+                <text class="favoritesItemName">{{item.name}}</text>
+              </view>
+            </navigator>
           </view>
         </view>
       </view>
@@ -78,12 +78,20 @@
 
   <!--餐厅-->
   <view wx:else>
-    <view wx:if="{{userRestaurant.length == 0}}">
-      <navigator url="../restaurantRegister/restaurantRegister">创建餐厅</navigator>
+    <view wx:if="{{userRestaurant.length == 0}}" class="beauttext">
+      <navigator url="../restaurantRegister/restaurantRegister">暂无餐厅，请创建您的餐厅</navigator>
     </view>
     <view wx:else>
-      
+      <view wx:for="{{userRestaurant}}" wx:for-item="item">
+        <navigator url="../restaurantInfo/restaurantInfo?openid={{item.openid}}&&_id={{item._id}}">
+        <view class="favoritesItem">
+          <image src="{{item.cover}}" mode="widthFix" class="favoritesItemImage"></image>
+          <text class="favoritesItemName">{{item.name}}</text>
+        </view>
+        </navigator>
+      </view>
     </view>
   </view> 
 </view>
+
 
