--- a/miniprogram/pages/classificationList/classificationList.wxss
+++ b/miniprogram/pages/classificationList/classificationList.wxss
@@ -8,6 +8,7 @@
   text-align: center;
   margin: 50rpx auto;
   font-weight: bold;
+  color: rgb(152, 190, 202);
 }
 
 .favoritesList{
@@ -71,10 +72,10 @@
 
 .favoritesItemName{
   width: 100%;
-  height: 20rpx;
+  height: 40rpx;
   text-align: left;
-  margin: 20rpx auto;
-  font-size: 30rpx;
+  margin:20rpx auto;
+  font-size: 35rpx;
   color: rgb(0, 0, 0);
 }
 
@@ -85,17 +86,27 @@
 
 .authorSet{
   width: 300rpx;
-  height: 30rpx;
+  height: 45rpx;
 }
 
 .authorSetIcon{
-  width: 20rpx;
-  height:20rpx;
-  margin-left:20rpx;
+  width: 30rpx;
+  height:30rpx;
+  margin-left:30rpx;
+
 }
 
 .authorSetText{
   color:rgb(163, 163, 163);
-  font-size:25rpx;
+  font-size:30rpx;
   margin-left:10rpx;
+}
+
+.background {
+  margin-left: 5%;
+  width: 80%;
+  height: 20%;
+  position:fixed; 
+  background-size:100% 100%;
+  z-index: -1;
 }
