--- a/miniprogram/pages/userInfo/userInfo.wxss
+++ b/miniprogram/pages/userInfo/userInfo.wxss
@@ -1,4 +1,4 @@
-/* pages/mine/mine.wxss */
+/* pages/restaurant/restaurant.wxss */
 .title {
   font-size: 60rpx;
   display: flex; /* 设置显示样式 */
@@ -108,4 +108,10 @@
   text-align: left;
   font-size: 30rpx;
   color: gray;
+}
+
+.beauttext{
+  font-size: large;
+  color: rgb(47, 189, 158);
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
