--- a/miniprogram/pages/userList/userList.wxss
+++ b/miniprogram/pages/userList/userList.wxss
@@ -109,3 +109,9 @@
   font-size: 30rpx;
   color: gray;
 }
+
+.beauttext{
+  font-size: large;
+  color: rgb(47, 189, 158);
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
