--- a/miniprogram/pages/restaurantInfo/restaurantInfo.wxml
+++ b/miniprogram/pages/restaurantInfo/restaurantInfo.wxml
@@ -1,11 +1,10 @@
 <!--pages/restaurantInfo/restaurantInfo.wxml-->
 <view class="body">
 	<view class="restaurantImage">
-		<image src="../../images/indexImage.png" style="border-radius: 10rpx; height:420rpx;" mode="aspectFill"></image>
+		<image src="{{restaurantInfo.cover}}" style="border-radius: 10rpx; height:420rpx;" mode="aspectFill"></image>
 	</view>
 	<view class="address">
 		<view class="address-name">{{restaurantInfo.name}}</view>
-		<button bindtap="concern" class="concern-button">关注</button>
 	</view>
 	<view class="review">
 		<text class="review-txt">{{restaurantInfo.introduction}}</text>
